--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,321 @@ channels:
   - oggm
   - conda-forge
 dependencies:
-  - python=3.9
-  - mamba
-  - oggm-deps
-  - ca-certificates
-  - certifi
-  - openssl
-  - hdf5=1.12.1
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - affine=2.3.1=pyhd8ed1ab_0
+  - alsa-lib=1.2.3=h516909a_0
+  - aom=3.3.0=h27087fc_1
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py39h3811e60_1
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.0=pyha770c72_0
+  - bleach=5.0.0=pyhd8ed1ab_0
+  - blosc=1.21.0=h9c3ff4c_0
+  - bokeh=2.4.2=py39hf3d152e_0
+  - boost-cpp=1.74.0=h6cacc03_7
+  - branca=0.4.2=pyhd8ed1ab_0
+  - brotli=1.0.9=h166bdaf_7
+  - brotli-bin=1.0.9=h166bdaf_7
+  - brotlipy=0.7.0=py39hb9d737c_1004
+  - brunsli=0.1=h9c3ff4c_0
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
+  - c-blosc2=2.0.4=h5f21a17_1
+  - ca-certificates=2021.10.8=ha878542_0
+  - cairo=1.16.0=ha12eb4b_1010
+  - cartopy=0.20.2=py39h0ddd56c_4
+  - certifi=2021.10.8=py39hf3d152e_2
+  - cffi=1.15.0=py39h4bc2ebd_0
+  - cfitsio=4.1.0=hd9d235c_0
+  - cftime=1.6.0=py39hd257fcd_0
+  - charls=2.3.4=h9c3ff4c_0
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - click=8.1.2=py39hf3d152e_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
+  - cloudpickle=2.0.0=pyhd8ed1ab_0
+  - configobj=5.0.6=py_0
+  - cryptography=36.0.2=py39hd97740a_1
+  - curl=7.82.0=h7bff187_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - cython=0.29.28=py39h5a03fae_2
+  - cytoolz=0.11.2=py39hb9d737c_2
+  - dask=2022.4.0=pyhd8ed1ab_0
+  - dask-core=2022.4.0=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.5.1=py39he80948d_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - descartes=1.1.0=py_4
+  - distributed=2022.4.0=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=0.8.3=pyhd8ed1ab_0
+  - expat=2.4.8=h27087fc_0
+  - filelock=3.6.0=pyhd8ed1ab_0
+  - fiona=1.8.21=py39h83acdc4_1
+  - flit-core=3.7.1=pyhd8ed1ab_0
+  - folium=0.12.1.post1=pyhd8ed1ab_1
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.0=h8e229c2_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.31.2=py39hb9d737c_1
+  - freetype=2.10.4=h0708190_1
+  - freexl=1.0.6=h7f98852_0
+  - fsspec=2022.3.0=pyhd8ed1ab_0
+  - gdal=3.4.2=py39hc691d54_4
+  - geopandas=0.10.2=pyhd8ed1ab_1
+  - geopandas-base=0.10.2=pyha770c72_1
+  - geos=3.10.2=h9c3ff4c_0
+  - geotiff=1.7.1=h509b78c_1
+  - gettext=0.19.8.1=h73d1719_1008
+  - giflib=5.2.1=h36c2ea0_2
+  - gst-plugins-base=1.20.1=hcf0ee16_1
+  - gstreamer=1.20.1=hd4edc92_1
+  - hdf4=4.2.15=h10796ff_3
+  - hdf5=1.12.1=nompi_h2386368_104
+  - heapdict=1.0.1=py_0
+  - icu=69.1=h9c3ff4c_0
+  - idna=3.3=pyhd8ed1ab_0
+  - imagecodecs=2022.2.22=py39h5fd7a1c_3
+  - imageio=2.16.1=pyhcf75d05_0
+  - importlib-metadata=4.11.3=py39hf3d152e_1
+  - importlib_metadata=4.11.3=hd8ed1ab_1
+  - importlib_resources=5.6.0=pyhd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - ipykernel=6.12.0=py39hef51801_0
+  - ipython=8.2.0=py39hf3d152e_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.7.0=pyhd8ed1ab_0
+  - jbig=2.1=h7f98852_2003
+  - jedi=0.18.1=py39hf3d152e_1
+  - jinja2=3.1.1=pyhd8ed1ab_0
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9e=h7f98852_0
+  - json-c=0.15=h98cffda_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter=1.0.0=py39hf3d152e_7
+  - jupyter_client=7.2.2=pyhd8ed1ab_1
+  - jupyter_console=6.4.3=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py39hf3d152e_0
+  - jupyterlab_pygments=0.2.0=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.1.0=pyhd8ed1ab_0
+  - jxrlib=1.1=h7f98852_2
+  - kealib=1.4.14=h87e4c3c_3
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.2=py39hf939315_1
+  - krb5=1.19.3=h3790be6_0
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libaec=1.0.6=h9c3ff4c_0
+  - libavif=0.10.0=h166bdaf_1
+  - libblas=3.9.0=14_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_7
+  - libbrotlidec=1.0.9=h166bdaf_7
+  - libbrotlienc=1.0.9=h166bdaf_7
+  - libcblas=3.9.0=14_linux64_openblas
+  - libclang=13.0.1=default_hc23dcda_0
+  - libcurl=7.82.0=h7bff187_0
+  - libdap4=3.20.6=hd7c4107_2
+  - libdeflate=1.10=h7f98852_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libevent=2.1.10=h9b69904_4
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=11.2.0=h1d223b6_15
+  - libgdal=3.4.2=hd724a2d_4
+  - libgfortran-ng=11.2.0=h69a702a_15
+  - libgfortran5=11.2.0=h5c6108e_15
+  - libglib=2.70.2=h174f98d_4
+  - libgomp=11.2.0=h1d223b6_15
+  - libiconv=1.16=h516909a_0
+  - libkml=1.3.0=h238a007_1014
+  - liblapack=3.9.0=14_linux64_openblas
+  - libllvm13=13.0.1=hf817b99_2
+  - libnetcdf=4.8.1=nompi_hb3fd0d9_101
+  - libnghttp2=1.47.0=h727a467_0
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.37=h21135ba_2
+  - libpq=14.2=hd57d9b9_0
+  - librttopo=1.1.0=hf69c175_9
+  - libsodium=1.0.18=h36c2ea0_1
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libspatialite=5.0.1=ha867d66_15
+  - libssh2=1.10.0=ha56f1ee_2
+  - libstdcxx-ng=11.2.0=he4da1e4_15
+  - libtiff=4.3.0=h542a066_3
+  - libuuid=2.32.1=h7f98852_1000
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.12=h885dcf4_1
+  - libzip=1.8.0=h4de3113_1
+  - libzlib=1.2.11=h166bdaf_1014
+  - libzopfli=1.0.3=h9c3ff4c_0
+  - locket=0.2.0=py_2
+  - lz4=4.0.0=py39h029007f_1
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - lzo=2.10=h516909a_1000
+  - mapclassify=2.4.3=pyhd8ed1ab_0
+  - markupsafe=2.1.1=py39hb9d737c_1
+  - matplotlib=3.5.1=py39hf3d152e_0
+  - matplotlib-base=3.5.1=py39h2fa2bec_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py39h3811e60_1005
+  - motionless=1.3.3=pyhd8ed1ab_0
+  - msgpack-python=1.0.3=py39hf939315_1
+  - munch=2.5.0=py_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.28=haf5c9bc_3
+  - mysql-libs=8.0.28=h28c427c_3
+  - nbclient=0.5.13=pyhd8ed1ab_0
+  - nbconvert=6.4.5=pyhd8ed1ab_2
+  - nbconvert-core=6.4.5=pyhd8ed1ab_2
+  - nbconvert-pandoc=6.4.5=pyhd8ed1ab_2
+  - nbformat=5.3.0=pyhd8ed1ab_0
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - netcdf4=1.5.8=nompi_py39h64b754b_101
+  - networkx=2.7.1=pyhd8ed1ab_1
+  - nomkl=1.0=h5ca1d4c_0
+  - notebook=6.4.10=pyha770c72_0
+  - nspr=4.32=h9c3ff4c_1
+  - nss=3.77=h2350873_0
+  - numexpr=2.8.0=py39hbd72853_101
+  - numpy=1.22.3=py39h18676bf_1
+  - oggm=1.5.2=py_0
+  - oggm-deps=100=21
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=1.1.1n=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.4.2=py39h1832856_0
+  - pandoc=2.17.1.1=ha770c72_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - partd=1.2.0=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.1.0=py39hae2aec6_0
+  - pip=22.0.4=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
+  - pluggy=1.0.0=py39hf3d152e_3
+  - poppler=22.01.0=h1434ded_2
+  - poppler-data=0.4.11=hd8ed1ab_0
+  - postgresql=14.2=h2510834_0
+  - progressbar2=4.0.0=pyhd8ed1ab_0
+  - proj=9.0.0=h93bde94_1
+  - prometheus_client=0.14.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.29=pyha770c72_0
+  - prompt_toolkit=3.0.29=hd8ed1ab_0
+  - psutil=5.9.0=py39hb9d737c_1
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - py=1.11.0=pyh6c4a22f_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pyproj=3.3.0=py39hcadae2f_2
+  - pyqt=5.12.3=py39hf3d152e_8
+  - pyqt-impl=5.12.3=py39hde8b62d_8
+  - pyqt5-sip=4.19.18=py39he80948d_8
+  - pyqtchart=5.12=py39h0fcd23e_8
+  - pyqtwebengine=5.12.1=py39h0fcd23e_8
+  - pyrsistent=0.18.1=py39hb9d737c_1
+  - pyshp=2.2.0=pyhd8ed1ab_0
+  - pysocks=1.7.1=py39hf3d152e_5
+  - pytables=3.7.0=py39h2669a42_0
+  - pytest=7.1.1=py39hf3d152e_1
+  - pytest-mpl=0.123.0.202203011211=py_0
+  - python=3.9.12=h9a8a25e_1_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
+  - python-utils=3.1.0=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytz=2022.1=pyhd8ed1ab_0
+  - pywavelets=1.3.0=py39hd257fcd_0
+  - pyyaml=6.0=py39hb9d737c_4
+  - pyzmq=22.3.0=py39headdf64_2
+  - qt=5.12.9=h1304e3e_6
+  - qtconsole=5.3.0=pyhd8ed1ab_0
+  - qtconsole-base=5.3.0=pyhd8ed1ab_0
+  - qtpy=2.0.1=pyhd8ed1ab_0
+  - rasterio=1.2.10=py39h2e4b6e6_5
+  - readline=8.1=h46c0cb4_0
+  - requests=2.27.1=pyhd8ed1ab_0
+  - rtree=1.0.0=py39hb102c33_1
+  - salem=0.3.7.202203011211=py_0
+  - scikit-image=0.19.2=py39hde0f152_0
+  - scikit-learn=1.0.2=py39h4dfa638_0
+  - scipy=1.8.0=py39hee8e79c_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=62.0.0=py39hf3d152e_0
+  - setuptools-scm=6.4.2=pyhd8ed1ab_0
+  - setuptools_scm=6.4.2=hd8ed1ab_0
+  - setuptools_scm_git_archive=1.1=py_0
+  - shapely=1.8.0=py39ha65c37e_5
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.8=he1b5a44_3
+  - snuggs=1.4.7=py_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
+  - soupsieve=2.3.1=pyhd8ed1ab_0
+  - sqlite=3.37.1=h4ff8645_0
+  - stack_data=0.2.0=pyhd8ed1ab_0
+  - tblib=1.7.0=pyhd8ed1ab_0
+  - terminado=0.13.3=py39hf3d152e_1
+  - testpath=0.6.0=pyhd8ed1ab_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tifffile=2022.4.8=pyhd8ed1ab_0
+  - tiledb=2.7.2=h1e4a385_0
+  - tk=8.6.12=h27826a3_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - toolz=0.11.2=pyhd8ed1ab_0
+  - tornado=6.1=py39hb9d737c_3
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typing_extensions=4.1.1=pyha770c72_0
+  - tzcode=2022a=h166bdaf_0
+  - tzdata=2022a=h191b570_0
+  - unicodedata2=14.0.0=py39hb9d737c_1
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=3.6.0=py39hf3d152e_0
+  - xarray=2022.3.0=pyhd8ed1ab_0
+  - xerces-c=3.2.3=h8ce2273_4
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xyzservices=2022.3.0=pyhd8ed1ab_0
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h7f98852_2
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zfp=0.5.5=h9c3ff4c_8
+  - zict=2.1.0=pyhd8ed1ab_0
+  - zipp=3.8.0=pyhd8ed1ab_0
+  - zlib=1.2.11=h166bdaf_1014
+  - zstd=1.5.2=ha95c52a_0
