--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,11 +30,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Set up mcromamba 🐍++
+      - name: Set up micromamba 🐍++
         uses: mamba-org/setup-micromamba@v1
         with: 
           environment-file: ./environment.yml
-#           init-shell: bash
+          init-shell: bash
 #           condarc-file: ./condarc.yml
 #       - name: Set up miniconda 🐍 
 #         uses: conda-incubator/setup-miniconda@v2
@@ -44,7 +44,9 @@ jobs:
 #           condarc-file: ./condarc.yml
 #           clean-patched-environment-file: true
       - name: Activate conda environment for PyCall.jl  🐍 📞
+        shell: bash
         run: |
+          which python
           conda init bash
           source ~/.bashrc
           conda activate oggm_env
