--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,8 +34,8 @@ jobs:
         uses: mamba-org/setup-micromamba@v1
         with: 
           environment-file: ./environment.yml
-          init-shell: bash
-#           condarc-file: ./condarc.yml
+          init-shell: bash -l {0}
+          condarc-file: ./condarc.yml
 #       - name: Set up miniconda 🐍 
 #         uses: conda-incubator/setup-miniconda@v2
 #         with:
@@ -46,7 +46,7 @@ jobs:
       - name: Activate conda environment for PyCall.jl  🐍 📞
 #         uses: mamba-org/setup-micromamba@v1
 #         with: 
-#           init-shell: bash
+#           init-shell: bash -l {0}
         run: |
           which python
           pip list
@@ -64,7 +64,7 @@ jobs:
           # print installed dependencies 
           echo conda dependencies
           conda env export 
-        shell: bash
+        shell: bash -l {0}
         env: 
           PYTHON: /usr/share/miniconda/envs/oggm_env/bin/python
       - name: Test OGGM installation 🔧🌎 
