--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
 #         run: pytest.oggm
 #         shell: bash -el {0}
       - name: Set ENV Variables for PyCall.jl 🐍 📞
-        run: export PYTHON = read(`which python`, String)[1:end-1]
+        run: export PYTHON = $(which python)
 #         run: export PYTHON=/usr/share/miniconda/envs/oggm_env/bin/python
         shell: bash -el {0}
       - uses: julia-actions/setup-julia@v1
