--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,11 +78,15 @@ jobs:
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+        shell: bash -el {0}
       - uses: julia-actions/cache@v1
+        shell: bash -el {0}
       - uses: julia-actions/julia-buildpkg@v1
-        env:
-          PYTHON : /usr/share/miniconda/envs/oggm_env/bin/python
+        shell: bash -el {0}
+#         env:
+#           PYTHON : /usr/share/miniconda/envs/oggm_env/bin/python
       - uses: julia-actions/julia-runtest@v1
+        shell: bash -el {0}
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
