--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
+    defaults:
+       run:
+         shell: bash -el {0}
     strategy:
       fail-fast: false
       matrix:
@@ -78,15 +81,11 @@ jobs:
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-        shell: bash -el {0}
       - uses: julia-actions/cache@v1
-        shell: bash -el {0}
       - uses: julia-actions/julia-buildpkg@v1
-        shell: bash -el {0}
-#         env:
-#           PYTHON : /usr/share/miniconda/envs/oggm_env/bin/python
+        env:
+          PYTHON : /home/runner/micromamba/envs/oggm_env/bin/python
       - uses: julia-actions/julia-runtest@v1
-        shell: bash -el {0}
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
